<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_tab"
            android:title="@string/home_title" />
        <item
            android:id="@+id/menu_explore"
            android:icon="@drawable/ic_explore_tab"
            android:title="@string/explore_title" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile_tab"
            android:title="@string/profile_title" />
    </group>

    <item
        android:id="@+id/menu_connect_instagram"
        android:icon="@drawable/ic_instagram"
        android:title="@string/connect_instagram" />
    <item
        android:id="@+id/menu_share_app"
        android:icon="@drawable/ic_share"
        android:title="@string/share_with_friends" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>
